Updated argon theme extended to options game

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8775,186 +8775,172 @@ Fade = 2
 Tex = OptionsBG
 
 [OptionsText1]
-X = 25
-Y = 25
+X = 30
+Y = 30
 Color = White
 Font = 0
-Size = 54
+Size = 35
 Text = SING_OPTIONS
 Align = 0
 
 [OptionsButton]
-W = 75
-H = 80
-Color = White
+W = 60
+H = 60
+Color = ColorDark
 DColor = White
 Type = Transparent
 Texts = 1
 Fade = 1
 FadeText = 1
-SelectH = 70
+SelectH = 55
 FadeTex = ButtonFade
 FadeTexPos = 0
 
 [OptionsButtonGeneralText]
+X = 30
+Y = 70
 Font = 0
-Size = 26
+Size = 23
 Align = 1
 Color = White
 
 [OptionsButtonGeneral]
 Inheritance = OptionsButton
 X = 100
-Y = 120
+Y = 125
+W = 60
+H = 50
+SelectH = 45
 Tex = Optionsbuttongeneral
 
 [OptionsButtonGeneralText1]
 Inheritance = OptionsButtonGeneralText
-X = 35
-Y = 80
 Text = C_GENERAL
 
 [OptionsButtonGraphics]
 Inheritance = OptionsButton
-X = 260
+X = 265
 Y = 120
+W = 60
+H = 60
 Tex = Optionsbuttongraphics
 
 [OptionsButtonGraphicsText1]
 Inheritance = OptionsButtonGeneralText
-X = 40
-Y = 80
 Text = C_GRAPHICS
+Y = 75
 
 [OptionsButtonSound]
 Inheritance = OptionsButton
-X = 432
+X = 442
 Y = 120
-W = 59
-H = 70
+W = 32
 Tex = Optionsbuttonsound
-SelectH = 60
 
 [OptionsButtonSoundText1]
 Inheritance = OptionsButtonGeneralText
-X = 30
-Y = 80
 Text = C_SOUND
+X = 18
+Y = 75
 
 [OptionsButtonLyrics]
 Inheritance = OptionsButton
-X = 580
-Y = 120
-W = 70
-H = 75
+W = 40
+H = 50
+X = 603
+Y = 125
 Tex = Optionsbuttonlyrics
-SelectH = 65
+SelectH = 45
 
 [OptionsButtonLyricsText1]
 Inheritance = OptionsButtonGeneralText
-X = 35
-Y = 80
+X = 20
 Text = C_LYRICS
 
 [OptionsButtonThemes]
 Inheritance = OptionsButton
-X = 100
-Y = 270
-W = 95
-H = 85
+X = 107
+Y = 275
+W = 45
 Tex = Optionsbuttondesign
-SelectH = 75
 
 [OptionsButtonThemesText1]
 Inheritance = OptionsButtonGeneralText
-X = 35
-Y = 80
 Text = C_THEMES
+X = 25
+Y = 75
 
 [OptionsButtonMicrophones]
 Inheritance = OptionsButton
-X = 265
-Y = 270
-W = 73
-H = 75
+X = 275
+Y = 275
+W = 40
 Tex = Optionsbuttonmicrophones
-SelectH = 65
 
 [OptionsButtonMicrophonesText1]
 Inheritance = OptionsButtonGeneralText
-X = 40
-Y = 80
 Text = C_MICROPHONES
+X = 20
+Y = 75
 
 [OptionsButtonAdvanced]
 Inheritance = OptionsButton
 X = 432
-Y = 270
-W = 61
-H = 77
+Y = 275
 Tex = Optionsbuttonadvanced
-SelectH = 67
 
 [OptionsButtonAdvancedText1]
 Inheritance = OptionsButtonGeneralText
-X = 32
-Y = 80
 Text = C_ADVANCED
+Y = 75
 
 [OptionsButtonNetwork]
 Inheritance = OptionsButton
-X = 585
-Y = 270
-W = 59
-H = 77
+X = 600
+Y = 275
+W = 45
 Tex = Optionsbuttonnetwork
-SelectH = 67
 
 [OptionsButtonNetworkText1]
 Inheritance = OptionsButtonGeneralText
-X = 31
-Y = 80
 Text = C_INTERNET
+X = 23
+Y = 75
 
 [OptionsButtonWebcam]
 Inheritance = OptionsButton
 X = 100
-Y = 425
+Y = 445
+H = 45
+SelectH = 40
 Tex = Optionsbuttonwebcam
 
 [OptionsButtonWebcamText1]
 Inheritance = OptionsButtonGeneralText
-X = 35
-Y = 80
 Text = C_WEBCAM
+Y = 60
 
 [OptionsButtonProfiles]
 Inheritance = OptionsButton
-X = 270
-Y = 425
-W = 57
-H = 75
+X = 275
+Y = 432
+W = 40
 Tex = Optionsbuttonprofiles
 
 [OptionsButtonProfilesText1]
 Inheritance = OptionsButtonGeneralText
-X = 30
-Y = 80
 Text = C_PROFILES
+X = 23
+Y = 75
 
 [OptionsButtonExit]
 Inheritance = OptionsButton
-X = 420
-Y = 425
-W = 70
-H = 80
+X = 730
+Y = 540
+H = 25
+W = 25
+SelectH = 23
 Tex = Optionsbuttonback
-
-[OptionsButtonExitText1]
-Inheritance = OptionsButtonGeneralText
-X = 40
-Y = 80
-Text = C_BACK
 
 
 [OptionsButtonExit2]
