--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -157,17 +157,17 @@ Rating_6 = [score]rating_6.png
 Rating_7 = [score]rating_7.png
 
 # # # O P T I O N S # # #
-Optionsbuttongeneral     = [Options]buttongeneral.png
-Optionsbuttongraphics    = [Options]buttongraphics.png
-Optionsbuttonsound       = [Options]buttonsound.png
-Optionsbuttonlyrics      = [Options]buttonlyrics.png
-Optionsbuttondesign      = [Options]buttondesign.png
-Optionsbuttonmicrophones = [Options]buttonmicrophones.png
-Optionsbuttonadvanced    = [Options]buttonadvanced.png
-Optionsbuttonnetwork     = [Options]buttonnetwork.png
-Optionsbuttonwebcam      = [Options]buttonwebcam.png
-Optionsbuttonprofiles    = [Options]buttonprofiles.png
-Optionsbuttonback        = [Options]buttonback.png
+Optionsbuttongeneral     = [Options]buttongeneral.svg
+Optionsbuttongraphics    = [Options]buttongraphics.svg
+Optionsbuttonsound       = [Options]buttonsound.svg
+Optionsbuttonlyrics      = [Options]buttonlyrics.svg
+Optionsbuttondesign      = [Options]buttondesign.svg
+Optionsbuttonmicrophones = [Options]buttonmicrophones.svg
+Optionsbuttonadvanced    = [Options]buttonadvanced.svg
+Optionsbuttonnetwork     = [Options]buttonnetwork.svg
+Optionsbuttonwebcam      = [Options]buttonwebcam.svg
+Optionsbuttonprofiles    = [Options]buttonprofiles.svg
+Optionsbuttonback        = [Options]buttonback.svg
 
 SelectBG                 = [Options]SelectBG.svg
 
