updated button back from several screens

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 22.7
+Text = UltraStar WorldParty 22.8
 
 [MainText2]
 X = 5
@@ -113,20 +113,18 @@ Align = 1
 Color = White
 
 [MainIconButton]
+Y = 510
 W = 30
 H = 40
-Y = 510
 Color = ColorDark
 DColor = White
 Type = Transparent
 Texts = 1
 Reflection = 0
 ReflectionSpacing = 0
-Fade = 1
+Fade = 0
 FadeText = 0
-FadeTexPos = 50
-FadeTex = 
-Reflection = 0
+FadeTexPos = 0
 SelectH = 40
 
 [MainStatic1]
@@ -7901,13 +7899,13 @@ Texts = 5
 Tex = PartyBG
 
 [JukeboxPlaylistText1]
-X = 70
-Y = 25
+X = 30
+Y = 30
 ColR = 0.7
 ColG = 0.7
 ColB = 0.7
 Font = 0
-Size = 60
+Size = 30
 Color = White
 Text = JUKEBOX_MODE
 
@@ -8510,25 +8508,15 @@ Text = STAT_DESC_BANDS
 Color = White
 
 [StatMainButtonExit]
-X = 589
-Y = 340
-W = 190
-H = 50
-Tex = Button
+X = 730
+Y = 530
+W = 30
+H = 30
+Tex = ButtonBack
+DColor = White
 Color = ColorDark
-DColor = GrayDark
 Type = Transparent
-Texts = 1
 Reflection = 0
-
-[StatMainButtonExitText1]
-X = 95
-Y = 10
-Font = 0
-Size = 30
-Align = 1
-Text = C_BACK
-Color = White
 
 [StatMainTextOverview]
 X = 45
@@ -8629,25 +8617,15 @@ Text = STAT_REVERSE
 Color = White
 
 [StatDetailButtonExit]
-X = 589
-Y = 280
-W = 190
-H = 50
-Tex = Button
+X = 730
+Y = 530
+W = 30
+H = 30
+Tex = ButtonBack
+DColor = White
 Color = ColorDark
-DColor = GrayDark
 Type = Transparent
-Texts = 1
 Reflection = 0
-
-[StatDetailButtonExitText1]
-X = 95
-Y = 10
-Font = 0
-Size = 30
-Align = 1
-Text = C_BACK
-Color = White
 
 [StatDetailTextDescription]
 X = 50
@@ -8940,7 +8918,7 @@ Y = 540
 H = 25
 W = 25
 SelectH = 23
-Tex = Optionsbuttonback
+Tex = ButtonBack
 
 
 [OptionsButtonExit2]
@@ -9967,25 +9945,15 @@ Alpha = 0.65
 Type = Transparent
 
 [AboutMainButtonExit]
-X = 660
+X = 720
 Y = 530
-W = 130
-H = 50
-Tex = Button
-DColor = Gray
+W = 30
+H = 30
+Tex = ButtonBack
+DColor = White
 Color = ColorDark
 Type = Transparent
-Texts = 1
 Reflection = 0
-
-[AboutMainButtonExitText1]
-X = 65
-Y = 10
-Font = 0
-Size = 30
-Align = 1
-Text = C_BACK
-Color = White
 
 [AboutMainButtonDevelopers]
 X = 270
@@ -10046,25 +10014,15 @@ Statics = 2
 Tex = MainBG
 
 [DevelopersButtonExit]
-X = 660
+X = 720
 Y = 530
-W = 130
-H = 50
-Tex = Button
-DColor = Gray
+W = 30
+H = 30
+Tex = ButtonBack
+DColor = White
 Color = ColorDark
 Type = Transparent
-Texts = 1
 Reflection = 0
-
-[DevelopersButtonExitText1]
-X = 65
-Y = 10
-Font = 0
-Size = 30
-Align = 1
-Text = C_BACK
-Color = White
 
 [DevelopersTextOverview]
 X = 70
