--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -167,7 +167,6 @@ Optionsbuttonadvanced    = [Options]buttonadvanced.svg
 Optionsbuttonnetwork     = [Options]buttonnetwork.svg
 Optionsbuttonwebcam      = [Options]buttonwebcam.svg
 Optionsbuttonprofiles    = [Options]buttonprofiles.svg
-Optionsbuttonback        = [Options]buttonback.svg
 
 SelectBG                 = [Options]SelectBG.svg
 
@@ -298,4 +297,5 @@ AboutBG = [About]helperbg2.png
 Dhelperbg = [Developers]helperbg.png
 
 # # # C O M M O N # # #
-OptMenuBG = [options]menubg.svg
+OptMenuBG  = [options]menubg.svg
+ButtonBack = buttonback.svg 
