statistics redesign part1

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8424,9 +8424,9 @@ Statics = 0
 Tex = MainBG
 
 [StatMainButtonScores]
-X = 589
+X = 30
 Y = 100
-W = 190
+W = 170
 H = 50
 Tex = Button
 Color = ColorDark
@@ -8436,18 +8436,18 @@ Texts = 1
 Reflection = 0
 
 [StatMainButtonScoresText1]
-X = 95
-Y = 10
+X = 85
+Y = 15
 Font = 0
-Size = 30
+Size = 20
 Align = 1
 Text = STAT_DESC_SCORES
 Color = White
 
 [StatMainButtonSingers]
-X = 589
-Y = 160
-W = 190
+X = 215
+Y = 100
+W = 170
 H = 50
 Tex = Button
 Color = ColorDark
@@ -8457,18 +8457,18 @@ Texts = 1
 Reflection = 0
 
 [StatMainButtonSingersText1]
-X = 95
-Y = 10
+X = 85
+Y = 15
 Font = 0
-Size = 30
+Size = 20
 Align = 1
 Text = STAT_DESC_SINGERS
 Color = White
 
 [StatMainButtonSongs]
-X = 589
-Y = 220
-W = 190
+X = 400
+Y = 100
+W = 170
 H = 50
 Tex = Button
 Color = ColorDark
@@ -8478,18 +8478,18 @@ Texts = 1
 Reflection = 0
 
 [StatMainButtonSongsText1]
-X = 95
-Y = 13
+X = 85
+Y = 15
 Font = 0
-Size = 24
+Size = 20
 Align = 1
 Text = STAT_DESC_SONGS
 Color = White
 
 [StatMainButtonBands]
-X = 589
-Y = 280
-W = 190
+X = 585
+Y = 100
+W = 170
 H = 50
 Tex = Button
 Color = ColorDark
@@ -8499,19 +8499,19 @@ Texts = 1
 Reflection = 0
 
 [StatMainButtonBandsText1]
-X = 95
-Y = 13
+X = 85
+Y = 15
 Font = 0
-Size = 24
+Size = 20
 Align = 1
 Text = STAT_DESC_BANDS
 Color = White
 
 [StatMainButtonExit]
-X = 730
-Y = 530
-W = 30
-H = 30
+X = 740
+Y = 550
+W = 20
+H = 20
 Tex = ButtonBack
 DColor = White
 Color = ColorDark
@@ -8520,29 +8520,29 @@ Reflection = 0
 
 [StatMainTextOverview]
 X = 45
-Y = 125
-W = 510
+Y = 190
+W = 710
 Color = White
 Font = 0
-Size = 25
+Size = 23
 Align = 0
 Text =
 
 [StatMainStatic1]
 X = 30
-Y = 100
-W = 530
-H = 340
+Y = 170
+W = 725
+H = 350
 Tex = StatInfoBG1
 Color = ColorDark
 Type = Colorized
 
 [StatMainText1]
-X = 50
-Y = 25
+X = 30
+Y = 30
 Color = White
 Font = 0
-Size = 50
+Size = 30
 Text = STAT_MAIN
 Align = 0
 
@@ -8650,80 +8650,52 @@ X = 50
 Y = 140
 Color = White
 Font = 0
-Size = 21
+Size = 17
 Text = Stat1
 
 [StatDetailTextList2]
-X = 50
+Inheritance = StatDetailTextList1
 Y = 178
-Color = White
-Font = 0
-Size = 21
 Text = Stat2
 
 [StatDetailTextList3]
-X = 50
+Inheritance = StatDetailTextList1
 Y = 216
-Color = White
-Font = 0
-Size = 21
 Text =
 
 [StatDetailTextList4]
-X = 50
+Inheritance = StatDetailTextList3
 Y = 254
-Color = White
-Font = 0
-Size = 21
-Text =
 
 [StatDetailTextList5]
-X = 50
+Inheritance = StatDetailTextList3
+StatDetailTextList3
 Y = 292
-Color = White
-Font = 0
-Size = 21
-Text =
 
 [StatDetailTextList6]
-X = 50
+Inheritance = StatDetailTextList3
+StatDetailTextList3
 Y = 330
-Color = White
-Font = 0
-Size = 21
-Text =
 
 [StatDetailTextList7]
-X = 50
+Inheritance = StatDetailTextList3
+StatDetailTextList3
 Y = 368
-Color = White
-Font = 0
-Size = 21
-Text =
 
 [StatDetailTextList8]
-X = 50
+Inheritance = StatDetailTextList3
+StatDetailTextList3
 Y = 406
-Color = White
-Font = 0
-Size = 21
-Text =
 
 [StatDetailTextList9]
-X = 50
+Inheritance = StatDetailTextList3
+StatDetailTextList3
 Y = 444
-Color = White
-Font = 0
-Size = 21
-Text =
 
 [StatDetailTextList10]
-X = 50
+Inheritance = StatDetailTextList3
+StatDetailTextList3
 Y = 482
-Color = White
-Font = 0
-Size = 21
-Text =
 
 [StatDetailStatic1]
 X = 40
