statistics redesign part2

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8427,9 +8427,9 @@ Tex = MainBG
 X = 30
 Y = 100
 W = 170
-H = 50
+H = 40
 Tex = Button
-Color = ColorDark
+Color = White
 DColor = GrayDark
 Type = Transparent
 Texts = 1
@@ -8437,7 +8437,7 @@ Reflection = 0
 
 [StatMainButtonScoresText1]
 X = 85
-Y = 15
+Y = 10
 Font = 0
 Size = 20
 Align = 1
@@ -8448,9 +8448,9 @@ Color = White
 X = 215
 Y = 100
 W = 170
-H = 50
+H = 40
 Tex = Button
-Color = ColorDark
+Color = White
 DColor = GrayDark
 Type = Transparent
 Texts = 1
@@ -8458,7 +8458,7 @@ Reflection = 0
 
 [StatMainButtonSingersText1]
 X = 85
-Y = 15
+Y = 10
 Font = 0
 Size = 20
 Align = 1
@@ -8469,9 +8469,9 @@ Color = White
 X = 400
 Y = 100
 W = 170
-H = 50
+H = 40
 Tex = Button
-Color = ColorDark
+Color = White
 DColor = GrayDark
 Type = Transparent
 Texts = 1
@@ -8479,7 +8479,7 @@ Reflection = 0
 
 [StatMainButtonSongsText1]
 X = 85
-Y = 15
+Y = 10
 Font = 0
 Size = 20
 Align = 1
@@ -8490,9 +8490,9 @@ Color = White
 X = 585
 Y = 100
 W = 170
-H = 50
+H = 40
 Tex = Button
-Color = ColorDark
+Color = White
 DColor = GrayDark
 Type = Transparent
 Texts = 1
@@ -8500,7 +8500,7 @@ Reflection = 0
 
 [StatMainButtonBandsText1]
 X = 85
-Y = 15
+Y = 10
 Font = 0
 Size = 20
 Align = 1
@@ -8508,8 +8508,8 @@ Text = STAT_DESC_BANDS
 Color = White
 
 [StatMainButtonExit]
-X = 740
-Y = 550
+X = 760
+Y = 560
 W = 20
 H = 20
 Tex = ButtonBack
@@ -8532,7 +8532,7 @@ Text =
 X = 30
 Y = 170
 W = 725
-H = 350
+H = 370
 Tex = StatInfoBG1
 Color = ColorDark
 Type = Colorized
@@ -8553,35 +8553,15 @@ Statics = 0
 [StatDetailBackground]
 Tex = MainBG
 
-[StatDetailButtonNext]
-X = 589
-Y = 100
-W = 190
-H = 50
-Tex = Button
-Color = ColorDark
-DColor = GrayDark
-Type = Transparent
-Texts = 1
-Reflection = 0
-
-[StatDetailButtonNextText1]
-X = 95
-Y = 10
-Font = 0
-Size = 30
-Align = 1
-Text = C_NEXT
-Color = White
 
 [StatDetailButtonPrev]
-X = 589
-Y = 160
-W = 190
-H = 50
-Tex = Button
+X = 377
+Y = 520
+W = 20
+H = 20
+Tex = Select_ArrowLeft
 Color = ColorDark
-DColor = GrayDark
+DColor = White
 Type = Transparent
 Texts = 1
 Reflection = 0
@@ -8590,37 +8570,58 @@ Reflection = 0
 X = 95
 Y = 10
 Font = 0
-Size = 30
+Size = 0
 Align = 1
 Text = STAT_PREV
 Color = White
 
-[StatDetailButtonReverse]
-X = 589
-Y = 220
-W = 190
-H = 50
-Tex = Button
+[StatDetailButtonNext]
+X = 403
+Y = 520
+W = 20
+H = 20
+Tex = Select_ArrowRight
 Color = ColorDark
-DColor = GrayDark
+DColor = White
+Type = Transparent
+Texts = 1
+Reflection = 0
+
+[StatDetailButtonNextText1]
+X = 95
+Y = 10
+Font = 0
+Size = 0
+Align = 1
+Text = C_NEXT
+Color = White
+
+[StatDetailButtonReverse]
+X = 720
+Y = 105
+W = 20
+H = 15
+Tex = ButtonSort
+Color = ColorDark
+DColor = White
 Type = Transparent
 Texts = 1
 Reflection = 0
 
 [StatDetailButtonReverseText1]
-X = 95
+X = 110
 Y = 10
 Font = 0
-Size = 30
+Size = 0
 Align = 1
 Text = STAT_REVERSE
 Color = White
 
 [StatDetailButtonExit]
-X = 730
-Y = 530
-W = 30
-H = 30
+X = 760
+Y = 560
+W = 20
+H = 20
 Tex = ButtonBack
 DColor = White
 Color = ColorDark
@@ -8628,91 +8629,96 @@ Type = Transparent
 Reflection = 0
 
 [StatDetailTextDescription]
-X = 50
-Y = 80
+X = 60
+Y = 110
 Color = White
 Font = 0
-Size = 25
+Size = 22
 Align = 0
 Text =
 
 [StatDetailTextPage]
-X = 440
-Y = 105
+X = 400
+Y = 110
 Color = White
 Font = 0
-Size = 15
-Align = 0
+Size = 12
+Align = 1
 Text =
 
 [StatDetailTextList1]
-X = 50
-Y = 140
+X = 60
+Y = 170
 Color = White
 Font = 0
-Size = 17
+Size = 15
 Text = Stat1
 
 [StatDetailTextList2]
 Inheritance = StatDetailTextList1
-Y = 178
+Y = 228
 Text = Stat2
 
 [StatDetailTextList3]
 Inheritance = StatDetailTextList1
-Y = 216
+Y = 286
 Text =
 
 [StatDetailTextList4]
 Inheritance = StatDetailTextList3
-Y = 254
+Y = 344
 
 [StatDetailTextList5]
 Inheritance = StatDetailTextList3
 StatDetailTextList3
-Y = 292
+Y = 402
 
 [StatDetailTextList6]
 Inheritance = StatDetailTextList3
 StatDetailTextList3
-Y = 330
+X = 400
+Y = 170
 
 [StatDetailTextList7]
 Inheritance = StatDetailTextList3
 StatDetailTextList3
-Y = 368
+X = 400
+Y = 228
 
 [StatDetailTextList8]
 Inheritance = StatDetailTextList3
 StatDetailTextList3
-Y = 406
+X = 400
+Y = 286
 
 [StatDetailTextList9]
 Inheritance = StatDetailTextList3
 StatDetailTextList3
-Y = 444
+X = 400
+Y = 344
 
 [StatDetailTextList10]
 Inheritance = StatDetailTextList3
 StatDetailTextList3
-Y = 482
+X = 400
+Y = 402
 
 [StatDetailStatic1]
 X = 40
-Y = 100
-W = 520
-H = 440
+Y = 85
+W = 720
+H = 470
 Tex = StatInfoBG2
-Color = ColorLight
-Type = Colorized
+Color = White
+Type = Transparent
 
 
 [StatDetailText1]
-X = 50
-Y = 25
+X = 30
+Y = 30
 Color = White
 Font = 0
-Size = 50
+Size = 30
 Text = STAT_DETAIL
 Align = 0
 
