--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -50,9 +50,6 @@ ButtonF          = buttonF.svg
 Button           = button.svg
 MainBar          = [main]mainBar.png
 
-Select_ArrowLeft = [interface]select_arrow_left.svg
-Select_ArrowRight = [interface]select_arrow_right.svg
-
 #Backgrounds
 LoadingBG      = [bg-load]basic.jpg
 TitleBG	   = [bg-main]violet.jpg
@@ -201,8 +198,8 @@ PartyTrophy			=[tournament]trophy.png
 PartyWinner			=[tournament]winner.png
 
 # # # S T A T S # # #
-StatInfoBG1 = [stat]InfoBG1.png
-StatInfoBG2 = [stat]InfoBG2.png
+StatInfoBG1 = [stat]InfoBG1.svg
+StatInfoBG2 = [stat]InfoBG2.svg
 
 # # # B A C K G R O U N D S # # #
 SongMenuBG  = [menu]songMenuBg.png
@@ -297,5 +294,11 @@ AboutBG = [About]helperbg2.png
 Dhelperbg = [Developers]helperbg.png
 
 # # # C O M M O N # # #
+ButtonBack = buttonback.svg
+ButtonSort = buttonsort.svg
+
 OptMenuBG  = [options]menubg.svg
-ButtonBack = buttonback.svg 
+
+Select_ArrowLeft = [interface]select_arrow_left.svg
+Select_ArrowRight = [interface]select_arrow_right.svg
+
