--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8901,10 +8901,10 @@ Tex = ButtonBack
 
 [OptionsButtonExit2]
 X = 740
-Y = 95
-W = 18
-H = 13
-Tex = ButtonClose
+Y = 100
+W = 17
+H = 17
+Tex = ButtonBack
 Color = ColorDark
 DColor = White
 Type = Transparent
@@ -9923,10 +9923,10 @@ Alpha = 0.65
 Type = Transparent
 
 [AboutMainButtonExit]
-X = 720
-Y = 530
-W = 30
-H = 30
+X = 750
+Y = 550
+W = 20
+H = 20
 Tex = ButtonBack
 DColor = White
 Color = ColorDark
@@ -9992,10 +9992,10 @@ Statics = 2
 Tex = MainBG
 
 [DevelopersButtonExit]
-X = 720
-Y = 530
-W = 30
-H = 30
+X = 750
+Y = 550
+W = 20
+H = 20
 Tex = ButtonBack
 DColor = White
 Color = ColorDark
