updated about and credits screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -8533,7 +8533,7 @@ X = 30
 Y = 170
 W = 725
 H = 370
-Tex = StatInfoBG1
+Tex = InfoBG1
 Color = ColorDark
 Type = Colorized
 
@@ -8708,7 +8708,7 @@ X = 40
 Y = 85
 W = 720
 H = 470
-Tex = StatInfoBG2
+Tex = InfoBG2
 Color = White
 Type = Transparent
 
@@ -9913,11 +9913,11 @@ Texts = 2
 Tex = MainBG
 
 [AboutMainStatico]
-Tex = AboutBG
 X = 25
-Y = 70
-W = 630
+Y = 90
+W = 710
 H = 450
+Tex = InfoBG1
 Color = White
 Alpha = 0.65
 Type = Transparent
@@ -9934,8 +9934,8 @@ Type = Transparent
 Reflection = 0
 
 [AboutMainButtonDevelopers]
-X = 270
-Y = 430
+X = 300
+Y = 440
 W = 140
 H = 70
 Tex = LogoWeb
@@ -9946,7 +9946,7 @@ Texts = 1
 Reflection = 0
 
 [AboutMainButtonDevelopersText1]
-X = 70
+X = 68
 Y = -35
 Font = 0
 Size = 25
@@ -9956,30 +9956,30 @@ Color = White
 
 [AboutMainTextOverview]
 X = 45
-Y = 125
-W = 600
+Y = 145
+W = 670
 Color = White
 Font = 0
-Size = 22
+Size = 20
 Align = 0
 Text = ABOUT_OVERVIEW
 
 [AboutMainText1]
-X = 70
-Y = 20
+X = 30
+Y = 30
 Color = White
 Font = 0
-Size = 60
+Size = 30
 Text = ABOUT_MAIN
 Align = 0
 
 [AboutMainText2]
-X = 524
-Y = 90
+X = 710
+Y = 110
 Color = White
 Font = 0
 Size = 20
-Align = 1
+Align = 2
 Text = US_VERSION
 Reflection = 0
 ReflectionSpacing = 13
@@ -10003,29 +10003,29 @@ Type = Transparent
 Reflection = 0
 
 [DevelopersTextOverview]
-X = 70
-Y = 125
-W = 400
+X = 60
+Y = 145
+W = 500
 Color = White
 DColor=
 Font = 0
-Size = 22
+Size = 20
 Align = 0
 Text = DEVELOPERS_OVERVIEW
 
 [DevelopersStatic1]
-X = 45
-Y = 115
-W = 630
-H = 460
-Tex=Dhelperbg
+X = 25
+Y = 90
+W = 710
+H = 450
+Tex=InfoBG1
 Color = White
 alpha=0.65
 Type = Transparent
 
 [DevelopersStatic2]
-X = 280
-Y = 475
+X = 300
+Y = 495
 W = 160
 H = 80
 Tex = LogoWeb
@@ -10033,11 +10033,11 @@ Color = White
 Type = Transparent
 
 [DevelopersText1]
-X = 70
+X = 30
 Y = 30
 Color = White
 Font = 0
-Size = 60
+Size = 30
 Text = DEVELOPERS_TITLE
 Align = 0
 
