--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -197,9 +197,6 @@ PartyPlayerSelectBG = [party]playerselectbg.png
 PartyTrophy			=[tournament]trophy.png
 PartyWinner			=[tournament]winner.png
 
-# # # S T A T S # # #
-StatInfoBG1 = [stat]InfoBG1.svg
-StatInfoBG2 = [stat]InfoBG2.svg
 
 # # # B A C K G R O U N D S # # #
 SongMenuBG  = [menu]songMenuBg.png
@@ -296,6 +293,9 @@ Dhelperbg = [Developers]helperbg.png
 # # # C O M M O N # # #
 ButtonBack = buttonback.svg
 ButtonSort = buttonsort.svg
+
+InfoBG1 = InfoBG1.svg
+InfoBG2 = InfoBG2.svg
 
 OptMenuBG  = [options]menubg.svg
 
