fixed color jukebox text

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 22.8
+Text = UltraStar WorldParty 22.9
 
 [MainText2]
 X = 5
@@ -8321,12 +8321,13 @@ Text=C_LYRICS
 
 [JukeboxSongOptionsLyricPositionSlide]
 Inheritance = OptionsSelectSlide
-Text = SING_OPTIONS_LYRIC_POSITION
+Text = SING_OPTIONS_LYRICS_POSITION
 X = 180
 Y = 120
 W = 200
 H = 20
 Z = 0.97
+TColor = ColorDark
 SkipX = 1
 SBGW = 220
 TextSize = 18
