--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -225,7 +225,7 @@ Tex = ButtonOption
 Inheritance = MainButtonText
 X = 15
 Y = 50
-Text = SING_OPTIONS
+Text = C_OPTIONS
 
 [MainButtonExit]
 Inheritance = MainIconButton
