--- a/game/themes/common/Waves.ini
+++ b/game/themes/common/Waves.ini
@@ -9,66 +9,69 @@
 #  under Creative Common license  #
 ###################################
 
-#Video credits to: AA VFX https://www.youtube.com/watch?v=53pUo71jr8w
+#Motion Backgrounds by: "#AAvfx" https://www.youtube.com/dvdangor2011
 
 ###############
 [Skin]
 Theme=Argon
 Name=Waves
-Color=Pink
+Color=Violet
 
 [Textures]
 /**
  * Interface
  */
-interface_selectbg_search   = [interface]selectbg_search.png
-interface_dialog_background = [interface]dialog_background.png
-interface_dialog_background2 = [interface]dialog_background2.png
-interface_dialog_backgroundtop = [interface]dialog_backgroundtop.png
+interface_dialog_background = [interface]dialog_background.svg
 
-Cursor = [interface]cursor.png
-Cursor_Pressed = [interface]cursor_pressed.png
+Cursor = cursor.svg
+Cursor_Pressed = cursor2.svg
+ButtonClose = buttonclose.svg
 
 /**
  * Icons
  */
-icon_song_menu   = [icon]song_menu.png
-icon_song_search = [icon]song_search.png
-icon_song_video  = [icon]song_video.png
-icon_song_medley = [icon]song_medley.png
-icon_song_calcmedley = [icon]song_calcmedley.png
-icon_song_duet 	 = [icon]song_duet.png
-icon_song_rap 	 = [icon]song_rap.png
-
-loadicon = [load]logo.png
-loadbaricon = [load]bar.png
+icon_song_search      = [icon]song_search.png
+icon_song_video       = [icon]song_video.png
+icon_song_medley      = [icon]song_medley.png
+icon_song_duet        = [icon]song_duet.png
+icon_song_rap         = [icon]song_rap.png
+icon_song_createdby   = [icon]song_createdby.png
+icon_song_fixedby     = [icon]song_fixedby.png
+icon_song_unvalidated = [icon]song_unvalidated.png
 
 # # # M A I N # # #
-ButtonSolo     = [main]buttonsolo.png
-ButtonAbout    = [main]buttonabout.png
-ButtonParty    = [main]buttonparty.png
-ButtonStats    = [main]buttonstats.png
-ButtonJukebox  = [main]buttonjukebox.png
-ButtonOption   = [main]buttonoption.png
-ButtonExit     = [main]buttonexit.png
-Button2        = [main]button2.png
-Button         = [main]button.png
-ButtonF        = [main]buttonf.jpg
-MainBar        = [main]mainBar.png
-SelectBG       = [main]selectbg.png
-
-Select_ArrowLeft = [interface]select_arrow_left.png
-Select_ArrowRight = [interface]select_arrow_right.png
+ButtonFrameBG    = [main]buttonframeBG.png
+ButtonSoloBG     = [main]buttonsoloBG.png
+ButtonPartyBG    = [main]buttonpartyBG.png
+ButtonJukeboxBG  = [main]buttonjukeboxBG.png
+ButtonAbout      = [main]buttonabout.svg
+ButtonStats      = [main]buttonstats.svg
+ButtonOption     = [main]buttonoption.svg
+ButtonExit       = [main]buttonexit.svg
+ButtonF          = buttonF.svg
+Button           = button.svg
+MainBar          = [main]mainBar.png
 
 #Backgrounds
 LoadingBG      = [bg-load]basic.jpg
-TitleBG	       = [bg-main]lines.webm
-MainBG         = [bg-main]lines.webm
-SongBG         = [bg-main]lines.webm
-ScoreScreenBG  = [bg-main]lines.webm
-Top5BG         = [bg-main]lines.webm
-OptionsBG      = [bg-main]lines.webm
-PartyBG        = [bg-main]lines.webm
+TitleBG	   = [bg-main]waves.webm
+MainBG         = [bg-main]waves.webm
+SongBG         = [bg-main]waves.webm
+ScoreScreenBG  = [bg-main]waves.webm
+Top5BG         = [bg-main]waves.webm
+OptionsBG      = [bg-main]waves.webm
+PartyBG        = [bg-main]waves.webm
+
+OptionsGeneralBG       = [bg-main]waves.webm
+OptionsGraphicsBG      = [bg-main]waves.webm
+OptionsSoundBG         = [bg-main]waves.webm
+OptionsLyricsBG        = [bg-main]waves.webm
+OptionsThemesBG        = [bg-main]waves.webm
+OptionsMicrophonesBG   = [bg-main]waves.webm
+OptionsAdvancedBG      = [bg-main]waves.webm
+OptionsInternetBG      = [bg-main]waves.webm
+OptionsWebcamBG        = [bg-main]waves.webm
+OptionsProfilesBG      = [bg-main]waves.webm
 
 # # # S O N G S E L E C E T # # #
 SongSelection1up = [main]songSelection1up.png
@@ -78,23 +81,24 @@ SongSelection3 = [main]songSelection3.png
 SongSelection4 = [main]songSelection4.png
 SongSelection5 = [main]songSelection5.png
 SongCover      = ../../covers/Common/NoCover.jpg
-SongMessage    = [song]message.png
 SongDuetSinger = [song]duetsinger.png
 SongDuetSinger2 = [song]duetsinger2.png
 SongDuetSinger3 = [song]duetsinger3.png
 
+Menubg = [menu]bg.png
+
 # # # S I N G # # #
 #the bar where the lyrics reside
-LyricBar       = [sing]textBar.png
+LyricBar       = [sing]textBar.svg
 LyricBarDuet   = [sing]textBar.png
 
 #this one slides in, to tell you that singing starts immediately
-LyricHelpBar   = [sing]lyricsHelpBar.png
+LyricHelpBar   = [sing]lyricsHelpBar.svg
 
 #the bar behind the timestuff
-TimeBar1      = [sing]timeBarBG.png
+TimeBar1      = [sing]timeBarBG.svg
 
-#the time progress bar  (not skinned in this theme :P )
+#the time progress bar
 TimeBar      = [sing]timeBar.jpg
 
 #linebonus, the thing that pop ups at the score
@@ -133,8 +137,6 @@ ScoreLevel_Light_Round    = [score]level_light_round.png
 ScoreLevel_Lightest       = [score]level_lightest.png
 ScoreLevel_Lightest_Round = [score]level_lightest_round.png
 
-ButtonSendScore = [score]buttonsendscore.png
-
 # Boxes near the text, that show what color is for which bar
 ScoreBar_box_lightest = [score]bar_box_lightest.png
 ScoreBar_box_light    = [score]bar_box_light.png
@@ -154,22 +156,23 @@ Rating_6 = [score]rating_6.png
 Rating_7 = [score]rating_7.png
 
 # # # O P T I O N S # # #
-Optionsbuttongame        = [Options]buttongame.png
-Optionsbuttongraphics    = [Options]buttongraphics.png
-Optionsbuttonsound       = [Options]buttonsound.png
-Optionsbuttonlyrics      = [Options]buttonlyrics.png
-Optionsbuttondesign      = [Options]buttondesign.png
-Optionsbuttonmicrophones = [Options]buttonmicrophones.png
-Optionsbuttonadvanced    = [Options]buttonadvanced.png
-Optionsbuttonnetwork     = [Options]buttonnetwork.png
-Optionsbuttonwebcam      = [Options]buttonwebcam.png
-Optionsbuttonjukebox     = [Options]buttonjukebox.png
-Optionsbuttonback        = [Options]buttonback.png
+Optionsbuttongeneral     = [Options]buttongeneral.svg
+Optionsbuttongraphics    = [Options]buttongraphics.svg
+Optionsbuttonsound       = [Options]buttonsound.svg
+Optionsbuttonlyrics      = [Options]buttonlyrics.svg
+Optionsbuttondesign      = [Options]buttondesign.svg
+Optionsbuttonmicrophones = [Options]buttonmicrophones.svg
+Optionsbuttonadvanced    = [Options]buttonadvanced.svg
+Optionsbuttonnetwork     = [Options]buttonnetwork.svg
+Optionsbuttonwebcam      = [Options]buttonwebcam.svg
+Optionsbuttonprofiles    = [Options]buttonprofiles.svg
+
+SelectBG                 = [Options]SelectBG.svg
+
+Optionsbuttoninsert      = [Options]buttoninsert.png
+Optionsbuttondelete      = [Options]buttondelete.png
 
 # # # M A I N   P A R T Y # # #
-ClassicButton     =[MainParty]ClassicButton.png
-ClassicFreeButton =[MainParty]ClassicFreeButton.png
-ChallengeButton   =[MainParty]ChallengeButton.png
 TournamentButton  =[tournament]trophy.png
 
 # # # P A R T Y # # #
@@ -196,14 +199,10 @@ PartyPlayerSelectBG = [party]playerselectbg.png
 PartyTrophy			=[tournament]trophy.png
 PartyWinner			=[tournament]winner.png
 
-# # # S T A T S # # #
-StatInfoBG1 = [stat]InfoBG1.png
-StatInfoBG2 = [stat]InfoBG2.png
 
 # # # B A C K G R O U N D S # # #
 SongMenuBG  = [menu]songMenuBg.png
 SongMenuSelectBG  = [menu]songMenuSelectBg.png
-PopUpBG     = [menu]popUpBG.png
 
 # # # N O T E S # # #
 # sung notes - colorized with playercolors
@@ -236,9 +235,8 @@ NotePerfectStar = [effect]perfectNoteStar.png
 
 
 # # # dirty helpers # # #
-Rectangle  = [helper]rectangle.png
+Rectangle  = [button]rectangle.png
 ButtonFade = [helper]buttonFade.png
-BGFade     = [special]bg_fade.png
 
 
 # # # DOWNLOAD SCORE # # #
@@ -267,37 +265,42 @@ JukeboxSongMenuNext = [jukebox]songmenunext.png
 JukeboxSongMenuPrevious = [jukebox]songmenuprevious.png
 JukeboxSongMenuPlaylist = [jukebox]songmenuplaylist.png
 JukeboxSongSelection = [jukebox]songselection.png
-JukeboxField = [jukebox]fieldbg.png
 JukeboxButton = [jukebox]mainBar.png
-JukeboxSelect = [jukebox]selectbg.png
 
 # # # COLOR PICKER # # #
-PickerBG = [color]pickerbg.png
 Picker   = [color]picker.jpg
-Hue = [color]hue.png
-HueBar = [color]hue-bar.png
-WhiteFade = [color]white-fade.png
-BlackFade = [color]black-fade.png
 Pointer = [color]pointer.png
 
-# # # N A M E # # #
+# # # P L A Y E R   S E L E C T I O N # # #
 AvatarFrame = [name]frame.png
 CurrentPlayer = [name]player.png
 SelectFrame = [name]select.png
 AvatarFrame2 = [score]frame.png
 
 # # # NO AVATARS # # #
-NoAvatar_P1  = [name]noavatar.png
-NoAvatar_P2  = [name]noavatar.png
-NoAvatar_P3  = [name]noavatar.png
-NoAvatar_P4  = [name]noavatar.png
-NoAvatar_P5  = [name]noavatar.png
-NoAvatar_P6  = [name]noavatar.png
+NoAvatar_P1  = [profiles]noavatar.svg
+NoAvatar_P2  = [profiles]noavatar.svg
+NoAvatar_P3  = [profiles]noavatar.svg
+NoAvatar_P4  = [profiles]noavatar.svg
+NoAvatar_P5  = [profiles]noavatar.svg
+NoAvatar_P6  = [profiles]noavatar.svg
 
 # # # A B O U T # # #
 LogoWeb = [About]logo_web.png
-LogoDeluxe = [About]logo_deluxe.png
 AboutBG = [About]helperbg2.png
 
 # # # D E V E L O P E R S # # #
 Dhelperbg = [Developers]helperbg.png
+
+# # # C O M M O N # # #
+ButtonBack = buttonback.svg
+ButtonSort = buttonsort.svg
+
+InfoBG1 = InfoBG1.svg
+InfoBG2 = InfoBG2.svg
+
+OptMenuBG  = [options]menubg.svg
+
+Select_ArrowLeft = [interface]select_arrow_left.svg
+Select_ArrowRight = [interface]select_arrow_right.svg
+
