--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 22.9
+Text = UltraStar WorldParty 22.10
 
 [MainText2]
 X = 5
@@ -6205,39 +6205,39 @@ Texts = 1
 Tex = Top5BG
 
 [Top5Text1]
-X = 70
-Y = 6
+X = 30
+Y = 30
 Color = White
 Font = 0
-Size = 60
+Size = 35
 Align = 0
 Text = SING_TOP_5_CHARTS
 
 [Top5TextArtistTitle]
-X = 70
-Y = 59
+X = 30
+Y = 80
 Color = White
 Font = 0
-Size = 30
+Size = 20
 Align = 0
 Text = artist - title
 
-[Top5Text4]
-X = 70
-Y = 83
+[Top5Text2]
+X = 30
+Y = 120
 Color = White
 Font = 0
-Size = 30
+Size = 20
 Align = 0
-Text = SING_OPTIONS_DIFFICULTY
+Text = C_DIFFICULTY
 
 [Top5TextLevel]
-X = 270
-Y = 83
+X = 150
+Y = 120
 Color = White
 Font = 0
-Size = 30
-Align = 1
+Size = 20
+Align = 0
 Text = easy
 
 [Top5Text5]
@@ -6254,231 +6254,134 @@ X = 150
 Y = 190
 Color = White
 Font = 0
-Size = 42
+Size = 30
 Align = 0
 Text = 1. Player1
 
 [Top5TextName2]
-X = 150
+Inheritance = Top5TextName1
 Y = 240
-Color = White
-Font = 0
-Size = 42
-Align = 0
 Text = 2. Player2
 
 [Top5TextName3]
-X = 150
+Inheritance = Top5TextName1
 Y = 290
-Color = White
-Font = 0
-Size = 42
-Align = 0
 Text = 3. Player3
 
 [Top5TextName4]
-X = 150
+Inheritance = Top5TextName1
 Y = 340
-Color = White
-Font = 0
-Size = 42
-Align = 0
 Text = 4. Player4
 
 [Top5TextName5]
-X = 150
+Inheritance = Top5TextName1
 Y = 390
-Color = White
-Font = 0
-Size = 42
-Align = 0
 Text = 5. Player5
 
 [Top5TextScore1]
-X = 560
+X = 520
 Y = 190
 Color = White
 Font = 0
-Size = 42
+Size = 30
 Align = 2
 Text = 00000
 
 [Top5TextScore2]
-X = 560
+Inheritance = Top5TextScore1
 Y = 240
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
 
 [Top5TextScore3]
-X = 560
+Inheritance = Top5TextScore1
 Y = 290
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
 
 [Top5TextScore4]
-X = 560
+Inheritance = Top5TextScore1
 Y = 340
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
 
 [Top5TextScore5]
-X = 560
+Inheritance = Top5TextScore1
 Y = 390
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
-
 
 [Top5TextDate1]
-X = 760
+X = 720
 Y = 190
 Color = White
 Font = 0
-Size = 42
+Size = 30
 Align = 2
 Text = 00000
 
 [Top5TextDate2]
-X = 760
+Inheritance = Top5TextDate1
 Y = 240
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
 
 [Top5TextDate3]
-X = 760
+Inheritance = Top5TextDate1
 Y = 290
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
 
 [Top5TextDate4]
-X = 760
+Inheritance = Top5TextDate1
 Y = 340
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
 
 [Top5TextDate5]
-X = 760
+Inheritance = Top5TextDate1
 Y = 390
-Color = White
-Font = 0
-Size = 42
-Align = 2
-Text = 00000
 
 [Top5TextNumber1]
-X = 120
+X = 117
 Y = 196
 Color = White
 Font = 1
-Size = 27
+Size = 23
 Align = 1
 Text = 1
 
 [Top5TextNumber2]
-X = 120
-Y = 246
-Color = White
-Font = 1
-Size = 27
-Align = 1
+Inheritance = Top5TextNumber1
+Y = 245
 Text = 2
 
 [Top5TextNumber3]
-X = 120
-Y = 296
-Color = White
-Font = 1
-Size = 27
-Align = 1
+Inheritance = Top5TextNumber1
+Y = 295
 Text = 3
 
 [Top5TextNumber4]
-X = 120
-Y = 346
-Color = White
-Font = 1
-Size = 27
-Align = 1
+Inheritance = Top5TextNumber1
+Y = 345
 Text = 4
 
 [Top5TextNumber5]
-X = 120
-Y = 396
-Color = White
-Font = 1
-Size = 27
-Align = 1
+Inheritance = Top5TextNumber1
+Y = 395
 Text = 5
 
 [Top5StaticNumber1]
 Tex = PlayerNumberBox
 X = 106
 Y = 190
-W = 29
-H = 38
+W = 24
+H = 32
 alpha = 0.6
 Color = ColorDark
 Type = Colorized
 
 [Top5StaticNumber2]
-Tex = PlayerNumberBox
-X = 106
+Inheritance = Top5StaticNumber1
 Y = 240
-W = 29
-H = 38
-alpha = 0.6
-Color = ColorDark
-Type = Colorized
 
 [Top5StaticNumber3]
-Tex = PlayerNumberBox
-X = 106
+Inheritance = Top5StaticNumber1
 Y = 290
-W = 29
-H = 38
-alpha = 0.6
-Color = ColorDark
-Type = Colorized
 
 [Top5StaticNumber4]
-Tex = PlayerNumberBox
-X = 106
+Inheritance = Top5StaticNumber1
 Y = 340
-W = 29
-H = 38
-alpha = 0.6
-Color = ColorDark
-Type = Colorized
 
 [Top5StaticNumber5]
-Tex = PlayerNumberBox
-X = 106
+Inheritance = Top5StaticNumber1
 Y = 390
-W = 29
-H = 38
-alpha = 0.6
-Color = ColorDark
-Type = Colorized
 
 ############################
 ###### P  A  R  T  Y #######
