Updated textures song selection

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -804,7 +804,7 @@ X = 240
 Y = 555
 W = 320
 H = 30
-Alpha = 0.5
+Alpha = 0.6
 Color = ColorDark
 DColor = White
 Tex = icon_song_search
@@ -1091,10 +1091,10 @@ Inheritance = SongTextCat
 #title screen: Song selection
 [SongRouletteTextNonParty1]
 X = 15
-Y = 15
+Y = 20
 Color = White
 Font = 0
-Size = 40
+Size = 30
 Text = SING_SONG_SELECTION
 Align = 0
 
@@ -1105,6 +1105,7 @@ Y = 280
 W = 237
 H = 270
 Z = 0.95
+Alpha = 0.85
 Color = ColorLight
 Tex = SongSelection2
 Type = Colorized
@@ -1168,7 +1169,7 @@ Y = 290
 W = 227
 Color = White
 Font = 1
-Size = 20
+Size = 18
 Align = 1
 
 [SongRouletteTextTitle]
@@ -1378,21 +1379,18 @@ Y = 70
 W = 205
 H = 530
 Z = 0.10
-alpha = 0.55
+alpha = 0.75
 
 [SongChessboardStatic2]
 X = 748
 Y = 220
 W = 30
 H = 41
-Z = 0.4
-Alpha = 0.6
+Alpha = 0.7
 Tex = SongSelection1up
 Color = ColorDark
-DColor = GrayLight
+DColor = ColorLight
 Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongChessboardStatic3]
 Inheritance = SongChessboardStatic2
@@ -1934,7 +1932,7 @@ Y = 190
 W = 740
 H = 200
 Z = 0.95
-Alpha = 0.75
+Alpha = 0.85
 Color = ColorLight
 Tex = SongSelection2
 Type = Colorized
