--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -28,7 +28,7 @@ ButtonClose = buttonclose.svg
 /**
  * Icons
  */
-icon_song_search      = [icon]song_search.png
+icon_song_search      = [icon]song_search.svg
 icon_song_video       = [icon]song_video.png
 icon_song_medley      = [icon]song_medley.png
 icon_song_duet        = [icon]song_duet.png
@@ -72,9 +72,9 @@ OptionsWebcamBG        = [bg-options]webcam.jpg
 OptionsProfilesBG      = [bg-options]profiles.jpg
 
 # # # S O N G S E L E C E T # # #
-SongSelection1up = [main]songSelection1up.png
-SongSelection1dn = [main]songSelection1dn.png
-SongSelection2 = [main]songSelection2.png
+SongSelection1up = [main]songSelection1up.svg
+SongSelection1dn = [main]songSelection1dn.svg
+SongSelection2 = [main]songSelection2.svg
 SongSelection3 = [main]songSelection3.png
 SongSelection4 = [main]songSelection4.png
 SongSelection5 = [main]songSelection5.png
