Fixed missing translation

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6430,7 +6430,7 @@ STDColor = GrayDark
 
 [PartyOptionsSelectLevel]
 Inheritance = PartyOptionsSelectMode
-Text = PARTY_DIFFICULTY
+Text = C_DIFFICULTY
 Y = 165
 
 [PartyOptionsSelectPlayList]
