updated party screen

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6392,31 +6392,27 @@ Texts = 5
 Tex = PartyBG
 
 [PartyOptionsText1]
-X = 70
-Y = 5
+X = 30
+Y = 30
 Font = 0
-Size = 60
+Size = 35
 Color = White
 Text = PARTY_MODE
-
-[PartyOptionsText2]
-Inheritance = PartyOptionsText1
-Y = 55
-Size = 30
-Text = PARTY_OPTIONS_DESC
 
 [PartyOptionsSelectMode]
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
+TextSize = 16
 TypeSBG = Transparent
 Text = PARTY_SELECT_MODE
 ShowArrows = 1
 OneItemOnly = 1
-X = 70
-Y = 110
-W = 230
-H = 40
+X = 150
+Y = 170
+W = 150
+H = 35
+SBGW = 300
 SkipX = 10
 Fields = 1
 DColor =
@@ -6431,16 +6427,16 @@ STDColor = GrayDark
 [PartyOptionsSelectLevel]
 Inheritance = PartyOptionsSelectMode
 Text = C_DIFFICULTY
-Y = 165
+Y = 225
 
 [PartyOptionsSelectPlayList]
 Inheritance = PartyOptionsSelectMode
 Text = PARTY_PLAYLIST
-Y = 220
+Y = 280
 
 [PartyOptionsSelectPlayListItems]
 Inheritance = PartyOptionsSelectMode
-Y = 275
+Y = 335
 
 [PartyOptionsSelectRounds]
 Inheritance = PartyOptionsSelectMode
@@ -6461,12 +6457,11 @@ Tex = PartyBG
 [PartyPlayerText1]
 Inheritance = PartyOptionsText1
 
-[PartyPlayerText2]
-Inheritance = PartyOptionsText2
-Text = PARTY_PLAYER_ENTER_NAME
-
 [PartyPlayerSelectTeams]
 Inheritance = PartyOptionsSelectMode
+SBGW = 150
+X = 200 
+Y = 120
 Text = PARTY_TEAMS
 Fields = 2
 
@@ -6476,8 +6471,7 @@ TexSBG = PartyPlayerSelectBG
 Text = PARTY_TEAMS_PLAYER1
 X = 310
 Y = 175
-W = 200
-SBGW = 190
+SBGW = 150
 
 [PartyPlayerSelectPlayers2]
 Inheritance = PartyPlayerSelectPlayers1
@@ -6491,18 +6485,18 @@ Y = 425
 
 [PartyPlayerTeam1Name]
 Tex = PartyTeamButton2
-X = 70
+X = 90
 Y = 175
-W = 230
-H = 40
+W = 180
+H = 35
 Type = Transparent
 Texts = 1
 
 [PartyPlayerTeam1NameText1]
-X = 115
-Y = 4
+X = 90
+Y = 10
 Font = 0
-Size = 32
+Size = 18
 Align = 1
 Text = Team 1
 Color = White
@@ -6511,20 +6505,19 @@ Color = White
 Inheritance = PartyPlayerTeam1Name
 Tex = Button
 Y = 225
-W = 154
+W = 140
 Reflection = 1
 ReflectionSpacing = 1
 
 [PartyPlayerPlayer1NameText1]
 Inheritance = PartyPlayerTeam1NameText1
-X = 77
-Y = 5
-Size = 30
+X = 70
+Y = 7
 Text = Player 1
 
 [PartyPlayerPlayer2Name]
 Inheritance = PartyPlayerPlayer1Name
-X = 232
+X = 240
 
 [PartyPlayerPlayer2NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6532,7 +6525,7 @@ Text = Player 2
 
 [PartyPlayerPlayer3Name]
 Inheritance = PartyPlayerPlayer1Name
-X = 394
+X = 390
 
 [PartyPlayerPlayer3NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6540,7 +6533,7 @@ Text = Player 3
 
 [PartyPlayerPlayer4Name]
 Inheritance = PartyPlayerPlayer1Name
-X = 556
+X = 540
 
 [PartyPlayerPlayer4NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
@@ -6563,27 +6556,27 @@ Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 5
 
 [PartyPlayerPlayer6Name]
-Inheritance = PartyPlayerPlayer5Name
-X = 232
+Inheritance = PartyPlayerPlayer2Name
+Y = 350
 
 [PartyPlayerPlayer6NameText1]
-Inheritance = PartyPlayerPlayer5NameText1
+Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 6
 
 [PartyPlayerPlayer7Name]
-Inheritance = PartyPlayerPlayer5Name
-X = 394
+Inheritance = PartyPlayerPlayer3Name
+Y = 350
 
 [PartyPlayerPlayer7NameText1]
-Inheritance = PartyPlayerPlayer5NameText1
+Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 7
 
 [PartyPlayerPlayer8Name]
-Inheritance = PartyPlayerPlayer5Name
-X = 556
+Inheritance = PartyPlayerPlayer4Name
+Y = 350
 
 [PartyPlayerPlayer8NameText1]
-Inheritance = PartyPlayerPlayer5NameText1
+Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 8
 
 [PartyPlayerTeam3Name]
@@ -6603,24 +6596,24 @@ Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 9
 
 [PartyPlayerPlayer10Name]
-Inheritance = PartyPlayerPlayer9Name
-X = 232
+Inheritance = PartyPlayerPlayer2Name
+Y = 475
 
 [PartyPlayerPlayer10NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 10
 
 [PartyPlayerPlayer11Name]
-Inheritance = PartyPlayerPlayer9Name
-X = 394
+Inheritance = PartyPlayerPlayer3Name
+Y = 475
 
 [PartyPlayerPlayer11NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
 Text = Player 11
 
 [PartyPlayerPlayer12Name]
-Inheritance = PartyPlayerPlayer9Name
-X = 556
+Inheritance = PartyPlayerPlayer4Name
+Y = 475
 
 [PartyPlayerPlayer12NameText1]
 Inheritance = PartyPlayerPlayer1NameText1
