redesigned party summary

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -6689,96 +6689,94 @@ Inheritance = PartyOptionsText1
 Inheritance = PartyOptionsText2
 Text = PARTY_ROUND_LEGEND_CONTINUE
 
+# Left BG
+[PartyNewRoundStatic1]
+Tex = InfoBG3
+X = 20
+Y = 90
+W = 370
+H = 280
+Color = ColorLightest
+Type = Colorized
+
+# Right BG
+[PartyNewRoundStatic2]
+Tex = InfoBG3
+X = 405
+Y = 90
+W = 370
+H = 280
+Color = ColorLightest
+Type = Colorized
+
 [PartyNewRoundText3]
-X = 460
-Y = 100
+X = 450
+Y = 110
 Color = White
 Font = 0
-Size = 30
+Size = 25
 Text = PARTY_ROUND
 Align = 0
 
 [PartyNewRoundText4]
 Inheritance = PartyNewRoundText3
-X = 600
+X = 620
 Text = PARTY_ROUND_WINNER
 
 [PartyNewRoundText5]
 X = 448
-Y = 350
+Y = 400
 Color = White
 Font = 0
-Size = 54
+Size = 40
 Text = PARTY_ROUND
 Align = 2
 
 [PartyNewRoundTextTeam1Players]
-X = 30
+X = 40
 Y = 137
 Color = White
 Font = 0
-Size = 21
+Size = 17
 Align = 0
 
 [PartyNewRoundTextTeam2Players]
 Inheritance = PartyNewRoundTextTeam1Players
-Y = 218
+Y = 230
 
 [PartyNewRoundTextTeam3Players]
 Inheritance = PartyNewRoundTextTeam1Players
-Y = 299
-
-[PartyNewRoundStatic4]
-Tex = PartyRoundBG1
-X = 450
-Y = 103
-W = 330
-H = 24
-Color = ColorDark
-Type = Colorized
-
-[PartyNewRoundStatic5]
-Tex = PartyRoundBG3
-X = 250
-Y = 350
-W = 300
-H = 50
-Color = ColorLight
-Type = Colorized
-
-[PartyNewRoundStatic6]
-Tex = PartyRoundBG4
-X = 50
-Y = 495
-W = 700
-H = 30
-Color = ColorLight
-Type = Colorized
+Y = 320
 
 [PartyNewRoundStaticTeam1]
-Tex = PartyTeamButton1
+Tex = RoundedUP
 X = 20
-Y = 110
-W = 400
-H = 50
+Y = 90
+W = 370
+H = 93
+Z = 0.9
+Alpha = 0.7
 Color = P1Dark
 Type = Transparent
 Reflection = 0
 
 [PartyNewRoundStaticTeam2]
 Inheritance = PartyNewRoundStaticTeam1
-Y = 191
+Y = 183
+Tex = AuxColor
 Color = P2Dark
 
 [PartyNewRoundStaticTeam3]
 Inheritance = PartyNewRoundStaticTeam1
-Y = 272
+H = 94
+Y = 276
+Tex = RoundedDN
 Color = P3Dark
 
 [PartyNewRoundStaticNextPlayer1]
 Tex = PartyPlayerButton
 X = 155
-Y = 415
+Y = 465
 W = 150
 H = 50
 Type = Transparent
@@ -6798,157 +6796,124 @@ X = 495
 Color = P3Dark
 
 [PartyNewRoundTextRound1]
-X = 460
-Y = 133
+X = 450
+Y = 155
 Color = White
 Font = 0
-Size = 24
+Size = 17
 Align = 0
 
 [PartyNewRoundTextRound2]
 Inheritance = PartyNewRoundTextRound1
-Y = 162
+Y = 182
 
 [PartyNewRoundTextRound3]
 Inheritance = PartyNewRoundTextRound1
-Y = 191
+Y = 209
 
 [PartyNewRoundTextRound4]
 Inheritance = PartyNewRoundTextRound1
-Y = 220
+Y = 236
 
 [PartyNewRoundTextRound5]
 Inheritance = PartyNewRoundTextRound1
-Y = 249
+Y = 263
 
 [PartyNewRoundTextRound6]
 Inheritance = PartyNewRoundTextRound1
-Y = 278
+Y = 290
 
 [PartyNewRoundTextRound7]
 Inheritance = PartyNewRoundTextRound1
-Y = 307
+Y = 317
 
 [PartyNewRoundTextWinner1]
-X = 600
-Y = 133
+X = 620
+Y = 155
 Color = White
 Font = 0
-Size = 24
+Size = 17
 Align = 0
 
 [PartyNewRoundTextWinner2]
 Inheritance = PartyNewRoundTextWinner1
-Y = 162
+Y = 182
 
 [PartyNewRoundTextWinner3]
 Inheritance = PartyNewRoundTextWinner1
-Y = 191
+Y = 209
 
 [PartyNewRoundTextWinner4]
 Inheritance = PartyNewRoundTextWinner1
-Y = 220
+Y = 236
 
 [PartyNewRoundTextWinner5]
 Inheritance = PartyNewRoundTextWinner1
-Y = 249
+Y = 263
 
 [PartyNewRoundTextWinner6]
 Inheritance = PartyNewRoundTextWinner1
-Y = 278
+Y = 290
 
 [PartyNewRoundTextWinner7]
 Inheritance = PartyNewRoundTextWinner1
-Y = 307
-
-[PartyNewRoundStaticRound1]
-Tex = PartyRoundBG2
-X = 450
-Y = 135
-W = 330
-H = 20
-Color = ColorLightest
-Type = Colorized
-
-[PartyNewRoundStaticRound2]
-Inheritance = PartyNewRoundStaticRound1
-Y = 164
-
-[PartyNewRoundStaticRound3]
-Inheritance = PartyNewRoundStaticRound1
-Y = 193
-
-[PartyNewRoundStaticRound4]
-Inheritance = PartyNewRoundStaticRound1
-Y = 222
-
-[PartyNewRoundStaticRound5]
-Inheritance = PartyNewRoundStaticRound1
-Y = 251
-
-[PartyNewRoundStaticRound6]
-Inheritance = PartyNewRoundStaticRound1
-Y = 280
-
-[PartyNewRoundStaticRound7]
-Inheritance = PartyNewRoundStaticRound1
-Y = 309
+Y = 317
 
 [PartyNewRoundTextNextRound]
 X = 400
-Y = 495
+Y = 545
 Color = White
 Font = 0
-Size = 30
+Size = 25
 Align = 1
 
 [PartyNewRoundTextNextRoundNo]
 X = 457
-Y = 350
+Y = 400
 Color = White
 Font = 0
-Size = 54
+Size = 40
 Text = 99
 Align = 0
 
 [PartyNewRoundTextScoreTeam1]
-X = 390
+X = 370
 Y = 110
 Color = White
 Font = 0
-Size = 51
-Align = 1
+Size = 30
+Align = 2
 
 [PartyNewRoundTextScoreTeam2]
 Inheritance = PartyNewRoundTextScoreTeam1
-Y = 191
+Y = 200
 
 [PartyNewRoundTextScoreTeam3]
 Inheritance = PartyNewRoundTextScoreTeam1
-Y = 272
+Y = 290
 
 [PartyNewRoundTextNameTeam1]
-X = 30
+X = 40
 Y = 108
 Color = White
 Font = 0
-Size = 36
+Size = 20
 Align = 0
 
 [PartyNewRoundTextNameTeam2]
 Inheritance = PartyNewRoundTextNameTeam1
-Y = 189
+Y = 200
 
 [PartyNewRoundTextNameTeam3]
 Inheritance = PartyNewRoundTextNameTeam1
-Y = 270
+Y = 290
 
 [PartyNewRoundTextNextPlayer1]
 X = 230
-Y = 425
+Y = 480
 Color = White
 Font = 0
-Size = 30
+Size = 25
 Align = 1
 
 [PartyNewRoundTextNextPlayer2]
