--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -291,13 +291,20 @@ AboutBG = [About]helperbg2.png
 Dhelperbg = [Developers]helperbg.png
 
 # # # C O M M O N # # #
+
+AuxColor = auxcolor.svg
+
 ButtonBack = buttonback.svg
 ButtonSort = buttonsort.svg
 
 InfoBG1 = InfoBG1.svg
 InfoBG2 = InfoBG2.svg
+InfoBG3 = InfoBG3.svg
 
 OptMenuBG  = [options]menubg.svg
+
+RoundedUP  = roundedup.svg
+RoundedDN  = roundeddn.svg
 
 Select_ArrowLeft = [interface]select_arrow_left.svg
 Select_ArrowRight = [interface]select_arrow_right.svg
