Add voice removal in song menu

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -641,6 +641,12 @@ Y = 220
 [SongMenuButton6Text1]
 Inheritance = SongMenuButton1Text1
 
+[SongMenuButton7]
+Inheritance = SongMenuButton1
+Y = 250
+
+[SongMenuButton7Text1]
+Inheritance = SongMenuButton1Text1
 
 # ----  LEGEND SONG MENU ----
 
@@ -2523,12 +2529,12 @@ Z = 1
 [SongListCreatorIcon]
 Inheritance = SongCreatorIcon
 X = 580
-Y = 530
+Y = 400
 
 [SongListFixerIcon]
 Inheritance = SongFixerIcon
 X = 580
-Y = 555
+Y = 430
 
 [SongListUnvalidatedIcon]
 ;Inheritance = SongUnvalidatedIcon
@@ -2574,12 +2580,12 @@ Align = 2
 [SongListTextCreator]
 Inheritance = SongRouletteTextCreator
 X = 600
-Y = 532
+Y = 400
 
 [SongListTextFixer]
 Inheritance = SongRouletteTextFixer
 X = 600
-Y = 556
+Y = 430
 
 [SongListTextMyScores]
 Inheritance = SongTextMyScores
